Resolve "throw runtime exception if key not found"