@@ -1,9 +1,11 @@
 package jackfruit.demo;
 
+import crucible.crust.logging.Log4j2Configurator;
+import jackfruit.processor.ConfigProcessor;
 import java.io.File;
 import java.io.PrintWriter;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 import javax.tools.JavaCompiler;
 import javax.tools.JavaCompiler.CompilationTask;
@@ -13,8 +15,6 @@ import javax.tools.StandardJavaFileManager;
 import javax.tools.StandardLocation;
 import javax.tools.ToolProvider;
 import org.junit.Test;
-import crucible.crust.logging.Log4j2Configurator;
-import jackfruit.processor.ConfigProcessor;
 
 /**
  * From <a href=
@@ -48,7 +48,7 @@ public class TestProcessor {
 
       CompilationTask task =
           compiler.getTask(new PrintWriter(System.out), null, null, null, null, files);
-      task.setProcessors(Arrays.asList(new ConfigProcessor()));
+      task.setProcessors(List.of(new ConfigProcessor()));
 
       task.call();
     }
@@ -58,7 +58,7 @@ public class TestProcessor {
     JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
     StandardJavaFileManager files = compiler.getStandardFileManager(null, null, null);
 
-    files.setLocation(StandardLocation.SOURCE_PATH, Arrays.asList(new File(p_path)));
+    files.setLocation(StandardLocation.SOURCE_PATH, List.of(new File(p_path)));
 
     Set<Kind> fileKinds = Collections.singleton(Kind.SOURCE);
     return files.list(StandardLocation.SOURCE_PATH, "", fileKinds, true);
